--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.17",
+    "country-emoji": "^1.5.6",
     "vue": "^3.2.47",
     "vue-router": "4"
   },
